# awesome-greek-software-engineering

./: .gitignore  Justfile  README.md  cliff.toml  contributing.md  development.md  engineering-hubs.md  index.html  pyproject.toml  readme.md  readme.yaml  remote-cafe-resources.md  sitemap.xml
.github/ISSUE_TEMPLATE/: 01-company-data-correction.yml  04-site-or-docs.yml
.github/workflows/: sync-on-main-merge.yaml
_data/: README.md  cafe_resources.yaml  open_source_github_stats.yaml  open_source_projects.yaml  podcasts.yaml  queries.yaml  readme.yaml  workable_counts.yaml
assets/css/: index.css
assets/js/: index.js  resources-search.js
data/: companies.yaml  workable_counts.yaml
docs/: development.md  engineering-hubs.md  greek-tech-podcasts.md  open-source-projects.md  readme.md  remote-cafe-resources.md  search-queries-and-resources.md
jekyll-pages/: _config.yml
job-search/: index.html
open-source/: index.html
podcasts/: index.html
resources/: index.html
scripts/: _committers_top_repos.py  fetch_workable_counts.py  generate_index.py  generate_readme.py
src/agse_site/: __init__.py  markdown_html.py
src/awesome_greek_software_engineering/: __init__.py  generate_index.py  generate_readme.py
src/awesome_greek_tech_jobs/: fetch_workable_counts.py  generate_index.py  generate_readme.py  jekyll_url_config.py
src/greek_software_ecosystem/: __init__.py  fetch_open_source_github_stats.py  fetch_workable_counts.py  generate_index.py  generate_readme.py  github_stars.py  jekyll_url_config.py  (+1 more)
templates/: index_template.html
workspaces/: index.html
(+21 files in other folders)
